crates/keron-lang/tests/corpus/errors/parse/missing_value.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected end of input, expected expression
  --> 2:1
  |
2 | 
  | ^
  = help: an expression is required here — write a value, name, or call.
